--- a/index.html
+++ b/index.html
@@ -304,3 +304,22 @@
   </script>
 </body>
 </html>
+<!-- Hero Section -->
+<header id="home" class="section flex flex-col items-center justify-center text-center">
+  <!-- Profile Image -->
+  <img src="DP_OFFICIAL.jpg" alt="Y. Vinay" class="w-40 h-40 rounded-full mb-6 object-cover border-4 border-blue-500" data-aos="fade-down">
+
+  <div class="max-w-3xl" data-aos="zoom-in">
+    <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold">
+      Hi, I'm <span class="text-blue-500">Y. Vinay</span>
+    </h1>
+    <p class="mt-4 text-lg sm:text-xl">
+      Enthusiastic CS student skilled in Python, Java, and MERN Stack. Passionate about full-stack development, problem-solving & UI/UX.
+    </p>
+    <a href="#projects" class="mt-8 inline-block bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition">
+      View My Work
+    </a>
+  </div>
+</header>
+
+
