--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Y. Vinay - Portfolio</title>
 
-  <!-- Prevent flash & respect saved/system theme BEFORE styles load -->
+  <!-- Theme script -->
   <script>
     (function () {
       const saved = localStorage.getItem("theme");
@@ -18,26 +18,24 @@
     })();
   </script>
 
-  <!-- Tailwind CDN + config for dark mode via class -->
+  <!-- Tailwind + config -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       darkMode: 'class',
       theme: {
-        extend: {
-          fontFamily: { inter: ['Inter', 'ui-sans-serif', 'system-ui'] }
-        }
+        extend: { fontFamily: { inter: ['Inter', 'ui-sans-serif', 'system-ui'] } }
       }
     }
   </script>
 
-  <!-- Fonts & icons -->
+  <!-- Fonts & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
 
-  <!-- AOS (scroll animations) -->
+  <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
 
   <style>
@@ -53,13 +51,12 @@
 </head>
 
 <body class="bg-gray-900 text-gray-300 dark:bg-white dark:text-gray-900">
+
   <!-- Navbar -->
   <nav class="bg-gray-900/80 dark:bg-white/80 backdrop-blur-sm sticky top-0 z-50 border-b border-gray-700 dark:border-gray-200">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <a href="#" class="font-bold text-xl text-white dark:text-gray-900">Y. Vinay</a>
-
-        <!-- Desktop Links -->
         <div class="hidden md:flex items-center space-x-4">
           <a href="#about" class="nav-link">About</a>
           <a href="#skills" class="nav-link">Skills</a>
@@ -68,20 +65,16 @@
           <a href="#experience" class="nav-link">Experience</a>
           <a href="#contact" class="nav-link">Contact</a>
         </div>
-
         <div class="flex items-center gap-2">
-          <!-- Theme toggle -->
           <button id="theme-toggle" class="p-2 rounded-lg border border-gray-600 dark:border-gray-300" aria-label="Toggle theme">
             <i id="theme-icon" class="fas"></i>
           </button>
-          <!-- Mobile menu button -->
           <button id="menu-toggle" class="md:hidden p-2 rounded-lg border border-gray-600 dark:border-gray-300" aria-label="Toggle menu">
             <i class="fas fa-bars"></i>
           </button>
         </div>
       </div>
 
-      <!-- Mobile menu -->
       <div id="mobile-menu" class="md:hidden hidden py-2 space-y-1">
         <a href="#about" class="block nav-link">About</a>
         <a href="#skills" class="block nav-link">Skills</a>
@@ -95,9 +88,8 @@
 
   <!-- Hero Section -->
   <header id="home" class="section flex flex-col items-center justify-center text-center">
-    <!-- Profile Image -->
+    <!-- Profile Image at top -->
     <img src="DP_OFFICIAL.jpg" alt="Y. Vinay" class="w-40 h-40 rounded-full mb-6 object-cover border-4 border-blue-500" data-aos="fade-down">
-
     <div class="max-w-3xl" data-aos="zoom-in">
       <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold">
         Hi, I'm <span class="text-blue-500">Y. Vinay</span>
@@ -161,66 +153,12 @@
       </div>
     </section>
 
-    <!-- Education -->
-    <section id="education" class="section" data-aos="fade-up">
-      <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="section-title">Education</h2>
-        <div class="grid md:grid-cols-3 gap-8">
-          <div class="card border-gray-700 dark:border-gray-300">
-            <h4 class="font-bold text-lg">B.Tech in CSE</h4>
-            <p class="text-gray-400 dark:text-gray-700">Malla Reddy University (2022 – Present) | CGPA: 7.93</p>
-          </div>
-          <div class="card border-gray-700 dark:border-gray-300">
-            <h4 class="font-bold text-lg">Intermediate (MPC)</h4>
-            <p class="text-gray-400 dark:text-gray-700">Sri Chaitanya Junior College (2020 – 2022) | 77.9%</p>
-          </div>
-          <div class="card border-gray-700 dark:border-gray-300">
-            <h4 class="font-bold text-lg">SSC</h4>
-            <p class="text-gray-400 dark:text-gray-700">Life Line High School (2019) | GPA: 9.3</p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- Education, Experience, Certifications will go here... -->
+    <!-- You can keep the rest of your sections same as before -->
 
-    <!-- Experience & Internship -->
-    <section id="experience" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
-      <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="section-title">Experience & Internship</h2>
-        <div class="grid md:grid-cols-2 gap-8">
-          <div class="card border-gray-700 dark:border-gray-300">
-            <h4 class="font-bold text-lg">Internship – UI/UX Designer</h4>
-            <p class="text-gray-400 dark:text-gray-700">Codtech IT Solutions (2024)</p>
-          </div>
-          <div class="card border-gray-700 dark:border-gray-300">
-            <h4 class="font-bold text-lg">Coordinator</h4>
-            <p class="text-gray-400 dark:text-gray-700">AutoExpo, Malla Reddy University – Managed logistics & activities for 2 years</p>
-          </div>
-          <div class="card border-gray-700 dark:border-gray-300">
-            <h4 class="font-bold text-lg">Anchor</h4>
-            <p class="text-gray-400 dark:text-gray-700">Farewell Event, MRU (2023)</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Certifications -->
-    <section class="section" data-aos="fade-up">
-      <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="section-title">Certifications</h2>
-        <div class="card border-gray-700 dark:border-gray-300">
-          <ul class="list-disc list-inside space-y-2 text-gray-300 dark:text-gray-800">
-            <li>Python Fundamentals – Coursera</li>
-            <li>Python Basics – Coursera</li>
-            <li>AWS Essentials – Udemy</li>
-            <li>Ethical Hacking: Linux Privilege Escalation – Udemy</li>
-            <li>Security, Compliance and Identity Fundamentals – Microsoft</li>
-          </ul>
-        </div>
-      </div>
-    </section>
   </main>
 
-  <!-- Contact -->
+  <!-- Contact & Footer as before -->
   <footer id="contact" class="section bg-gray-900 dark:bg-gray-50 border-t border-gray-700 dark:border-gray-200" data-aos="fade-up">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
       <h2 class="section-title">Get In Touch</h2>
@@ -245,7 +183,6 @@
         <span><i class="fas fa-map-marker-alt mr-2"></i>Hyderabad, India</span>
       </div>
 
-      <!-- CV Download -->
       <div class="mt-8">
         <a id="download-cv" href="Academic_CV_vinay.pdf" download="Y_Vinay_CV.pdf"
            class="inline-flex items-center gap-2 bg-blue-600 text-white py-3 px-6 rounded-lg hover:bg-blue-700 transition">
@@ -260,7 +197,6 @@
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    // AOS init
     AOS.init({ duration: 800, once: true });
 
     // Mobile menu toggle
@@ -268,22 +204,20 @@
       document.getElementById('mobile-menu').classList.toggle('hidden');
     });
 
-    // Theme toggle + persist
+    // Theme toggle
     const icon = document.getElementById('theme-icon');
     function setIcon() {
       const isDark = document.documentElement.classList.contains('dark');
       icon.className = 'fas ' + (isDark ? 'fa-sun' : 'fa-moon');
     }
     setIcon();
-
     document.getElementById('theme-toggle').addEventListener('click', () => {
-      const root = document.documentElement;
-      const isDark = root.classList.toggle('dark');
+      const isDark = document.documentElement.classList.toggle('dark');
       localStorage.setItem('theme', isDark ? 'dark' : 'light');
       setIcon();
     });
 
-    // Force-download CV
+    // CV download
     const cvPath = 'Academic_CV_vinay.pdf';
     document.getElementById('download-cv').addEventListener('click', async (e) => {
       e.preventDefault();
@@ -299,7 +233,7 @@
         a.click();
         a.remove();
         URL.revokeObjectURL(url);
-      } catch (err) {
+      } catch {
         location.href = cvPath;
       }
     });
