--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <!-- Hero Section -->
   <header id="home" class="section flex flex-col items-center justify-center text-center">
     <!-- Profile Image at top -->
-    <img src="DP_OFFICIAL.jpg" alt="Y. Vinay" class="w-40 h-40 rounded-full mb-6 object-cover border-4 border-blue-500" data-aos="fade-down">
+  <img src="DP%20OFFICIAL%20.jpg" alt="Y. Vinay" class="w-40 h-40 rounded-full mb-6 object-cover border-4 border-blue-500" data-aos="fade-down">
     <div class="max-w-3xl" data-aos="zoom-in">
       <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold">
         Hi, I'm <span class="text-blue-500">Y. Vinay</span>
@@ -240,3 +240,4 @@
   </script>
 </body>
 </html>
+
