--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     });
 
     // CV download
-    const cvPath = 'Academic_CV_vinay.pdf';
+    const cvPath = 'vinay resume or cv.pdf';
     document.getElementById('download-cv').addEventListener('click', async (e) => {
       e.preventDefault();
       try {
@@ -336,5 +336,6 @@
   </script>
 </body>
 </html>
+
 
 
